--- a/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
@@ -24,7 +24,7 @@
                     </connections>
                 </tabBarController>
             </objects>
-            <point key="canvasLocation" x="-463" y="-1390"/>
+            <point key="canvasLocation" x="-463" y="-1082"/>
         </scene>
         <!--Top Places Table View Controller - Root View Controller-->
         <scene sceneID="U0R-d6-VsB">
@@ -64,6 +64,11 @@
                         </prototypes>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="cfe-qw-jMe">
+                        <barButtonItem key="leftBarButtonItem" title="MAP" id="g52-ee-1pc">
+                            <connections>
+                                <segue destination="PSH-cc-uL0" kind="push" identifier="map locations" id="9pC-Nn-8rJ"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="hmM-5H-7T6">
                             <connections>
                                 <action selector="refresh:" destination="jnE-0O-dVj" id="Zdw-f2-SbU"/>
@@ -72,11 +77,10 @@
                     </navigationItem>
                     <connections>
                         <segue destination="5Gi-cV-eyt" kind="push" identifier="Get Recent Photos for Location" id="cyq-C8-o1t"/>
-                        <segue destination="PSH-cc-uL0" kind="push" identifier="get photo map for location" id="uAv-Tl-rYB"/>
                     </connections>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="818" y="-1847"/>
+            <point key="canvasLocation" x="818" y="-1595"/>
         </scene>
         <!--Photos From Location Table View Controller-->
         <scene sceneID="hVs-tr-mry">
@@ -105,6 +109,11 @@
                     </tableView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="hRr-1x-hT9">
+                        <barButtonItem key="leftBarButtonItem" title="MAP" id="dsJ-Rn-moo">
+                            <connections>
+                                <segue destination="PSH-cc-uL0" kind="push" identifier="map photo list" id="gsb-KD-uXh"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="TGS-qY-bum">
                             <connections>
                                 <action selector="refresh:" destination="5Gi-cV-eyt" id="uDU-sw-Yrp"/>
@@ -116,7 +125,7 @@
                     </connections>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="1316" y="-1487"/>
+            <point key="canvasLocation" x="1292" y="-1595"/>
         </scene>
         <!--Recent Photos Table View Controller - Root View Controller-->
         <scene sceneID="89v-rq-vmW">
@@ -156,10 +165,16 @@
                         </prototypes>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="9uq-0t-JCf"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="9uq-0t-JCf">
+                        <barButtonItem key="leftBarButtonItem" title="MAP" id="mPd-Y8-Dwd">
+                            <connections>
+                                <segue destination="PSH-cc-uL0" kind="push" identifier="map photo list" id="0z2-Vi-kkI"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="766" y="-308"/>
+            <point key="canvasLocation" x="1292" y="-404"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4kY-Jd-BMY">
@@ -175,7 +190,7 @@
                     </connections>
                 </navigationController>
             </objects>
-            <point key="canvasLocation" x="354" y="-308"/>
+            <point key="canvasLocation" x="818" y="-404"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ox9-FF-1gy">
@@ -191,7 +206,7 @@
                     </connections>
                 </navigationController>
             </objects>
-            <point key="canvasLocation" x="338" y="-1847"/>
+            <point key="canvasLocation" x="338" y="-1595"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="Ewl-9I-Ei7">
@@ -237,7 +252,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1316" y="-2435"/>
+            <point key="canvasLocation" x="1812" y="-1007"/>
         </scene>
         <!--Flickr Image View Controller-->
         <scene sceneID="6pK-rx-X0v">
@@ -298,9 +313,46 @@
             <point key="canvasLocation" x="-580" y="319"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="FlickrImageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FlickrImageViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="spinner" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="toolBarTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="PhotoListTableController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoListTableController.h"/>
+            <relationships>
+                <relationship kind="action" name="refresh:"/>
+                <relationship kind="outlet" name="refreshButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="PhotosFromLocationTableViewController" superclassName="PhotoListTableController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotosFromLocationTableViewController.h"/>
+        </class>
+        <class className="RecentPhotosTableViewController" superclassName="PhotoListTableController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
+        </class>
+        <class className="TopPlacesTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
+        </class>
+        <class className="mapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/mapViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="9pC-Nn-8rJ"/>
+    </inferredMetricsTieBreakers>
 </document>
