--- a/FlickrApp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4cn-pz-a0f">
     <dependencies>
-        <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
@@ -66,15 +65,8 @@
                             <outlet property="delegate" destination="s5f-vZ-k91" id="1VI-fy-uh9"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Recent Photos" id="Uq2-ly-JM9">
-                        <barButtonItem key="rightBarButtonItem" title="MAP" id="IkN-LF-qgL">
-                            <connections>
-                                <segue destination="nuq-gn-ToG" kind="push" identifier="map photo list" id="rhj-K7-evv"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Recent Photos" id="Uq2-ly-JM9"/>
                     <connections>
-                        <outlet property="mapButton" destination="IkN-LF-qgL" id="mZd-Sw-c3b"/>
                         <outlet property="view" destination="Cm9-B8-bsq" id="sth-94-jhi"/>
                         <segue destination="dKe-Wy-6G4" kind="push" identifier="image" id="ViM-Li-bLA"/>
                     </connections>
@@ -122,7 +114,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1557" y="-699"/>
+            <point key="canvasLocation" x="791" y="-280"/>
         </scene>
         <!--Top Places Table View Controller - Top Places-->
         <scene sceneID="wtk-7b-0Ta">
@@ -166,9 +158,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Location" id="8hl-bg-BcT">
-                        <barButtonItem key="rightBarButtonItem" title="MAP" id="WyC-43-eVe">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="biM-tT-0sK">
                             <connections>
-                                <segue destination="nuq-gn-ToG" kind="push" identifier="map locations" id="20K-hN-gCw"/>
+                                <action selector="refresh:" destination="tdN-Qc-gKr" id="tny-28-Jup"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -259,89 +251,28 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="RLz-wl-7L5">
-                        <barButtonItem key="rightBarButtonItem" title="MAP" id="rw3-i7-Urg">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="xcx-KJ-VGo">
                             <connections>
-                                <segue destination="nuq-gn-ToG" kind="push" identifier="map photo list" id="vMs-8d-pmY"/>
+                                <action selector="refresh:" destination="zeu-ef-mxl" id="Lzq-av-C8v"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="mapButton" destination="rw3-i7-Urg" id="8fk-Dc-NaD"/>
+                        <outlet property="refreshButton" destination="xcx-KJ-VGo" id="Edg-0i-d4u"/>
                         <outlet property="view" destination="z76-8K-aHd" id="Tw1-As-PVS"/>
                         <segue destination="dKe-Wy-6G4" kind="push" identifier="image" id="Vey-dB-SpO"/>
                     </connections>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="840" y="483"/>
-        </scene>
-        <!--Map View Controller-->
-        <scene sceneID="FPS-YY-ZGK">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="63D-5g-kmW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="nuq-gn-ToG" customClass="mapViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="a3K-sV-nd9">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="a9I-gO-Led">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </mapView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="5Wg-b6-2pb">
-                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="WcY-cD-cSB"/>
-                    </navigationItem>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-                    <connections>
-                        <outlet property="mapView" destination="a9I-gO-Led" id="vyI-vE-BUj"/>
-                        <segue destination="zeu-ef-mxl" kind="push" identifier="Show Image List for Location" id="T0d-ck-xZ0"/>
-                        <segue destination="dKe-Wy-6G4" kind="push" identifier="image" id="DlZ-Vj-z7C"/>
-                    </connections>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="850" y="-147"/>
+            <point key="canvasLocation" x="596" y="323"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="FlickrImageViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FlickrImageViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="spinner" candidateClass="UIActivityIndicatorView"/>
-                <relationship kind="outlet" name="toolBarTitle" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
-            </relationships>
-        </class>
-        <class className="PhotoListTableController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoListTableController.h"/>
-            <relationships>
-                <relationship kind="action" name="refresh:"/>
-                <relationship kind="outlet" name="mapButton" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="PhotosFromLocationTableViewController" superclassName="PhotoListTableController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotosFromLocationTableViewController.h"/>
-        </class>
-        <class className="RecentPhotosTableViewController" superclassName="PhotoListTableController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
-        </class>
-        <class className="TopPlacesTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
-        </class>
-        <class className="mapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/mapViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="Vey-dB-SpO"/>
+    </inferredMetricsTieBreakers>
 </document>
