--- a/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
@@ -201,34 +201,11 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <connections>
                         <segue destination="NdB-av-I7Y" kind="relationship" relationship="masterViewController" id="Hg2-ZN-QQ0"/>
-                        <segue destination="qvM-Dl-5DT" kind="relationship" relationship="detailViewController" id="2MH-MV-1B1"/>
+                        <segue destination="qvM-Dl-5DT" kind="relationship" relationship="detailViewController" id="Ta1-yX-DxD"/>
                     </connections>
                 </splitViewController>
             </objects>
             <point key="canvasLocation" x="-1509" y="-808"/>
-        </scene>
-        <!--Map View Controller-->
-        <scene sceneID="HlD-lK-vrx">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jHC-ck-XfH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="PSH-cc-uL0" customClass="mapViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ryo-p1-Q2v">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="kxm-4N-UPF">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </mapView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <connections>
-                        <outlet property="mapView" destination="kxm-4N-UPF" id="jra-7M-bQQ"/>
-                    </connections>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="1229" y="-669"/>
         </scene>
         <!--Flickr Image View Controller-->
         <scene sceneID="6pK-rx-X0v">
@@ -286,7 +263,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="-576" y="-241"/>
+            <point key="canvasLocation" x="-508" y="-93"/>
         </scene>
     </scenes>
     <classes>
@@ -315,12 +292,6 @@
         </class>
         <class className="TopPlacesTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
-        </class>
-        <class className="mapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/mapViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
